# teamspeak-autochannel.rs

./: Cargo.toml  README.md  config.toml.default
.github/workflows/: main.yml
src/: datastructures.rs  httplib.rs  main.rs  socketlib.rs  telnetlib.rs
