[workspace]
members = [".", "serde-teamspeak-querystring"]

[package]
name = "teamspeak-autochannel"
version = "0.8.0"
edition = "2021"

[dependencies]
ctrlc = "3.2.1"
anyhow = "1"
clap = "3.1"
env_logger = "0.9"
log = "0.4"
redis = "0.21"
reqwest = { version = "0.11.10", features = ["blocking", "json"], default-features = false }
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.79"
toml = "0.5.8"

[target.aarch64-unknown-linux-musl.dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json", "rustls-tls"], default-features = false }
