[package]
name = "teamspeak-autochannel"
version = "2.2.4"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.53"
clap = "3.1"
env_logger = "0.9"
log = "0.4"
once_cell = "1.10"
redis = { version = "0.21", features = ["tokio-comp"] }
reqwest = { version = "0.11.10", features = ["json"], default-features = false }
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.79"
tokio = { version = "1.18", features = ["full"] }
toml = "0.5"

[target.aarch64-unknown-linux-musl.dependencies]
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
lto = true
panic = "abort"