[package]
name = "teamspeak-autochannel"
version = "3.0.0-alpha"
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3.1"
env_logger = "0.9"
log = "0.4"
once_cell = "1.10"
redis = { version = "0.21", features = ["tokio-comp"] }
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.79"
tokio = { version = "1.20", features = ["full"] }
toml = "0.5"

[profile.release]
lto = true
panic = "abort"